# http://www.gnu.org/software/make/manual/make.html
# http://www.cs.colby.edu/maxwell/courses/tutorials/maketutor/
# http://mij.oltrelinux.com/devel/autoconf-automake/
# http://inti.sourceforge.net/tutorial/libinti/autotoolsproject.html

#######

sbin_PROGRAMS = raspi_pulsecount_mqtt

raspi_pulsecount_mqtt_SOURCES = raspi_pulsecount_mqtt.c
